week8/advanced2/parser.output
   0  $accept : %entry% $end

   1  toplevel : pair_expr SEMISEMI
   2           | LET var EQ expr SEMISEMI
   3           | LET REC var var EQ expr SEMISEMI

   4  pair_expr : expr KANMA pair_expr
   5            | expr

   6  expr : LET var EQ expr IN expr
   7       | LET REC var var EQ expr IN expr
   8       | IF expr THEN expr ELSE expr
   9       | FUN var ARROW expr
  10       | arith_expr EQ arith_expr
  11       | arith_expr LT arith_expr
  12       | arith_expr

  13  arith_expr : arith_expr PLUS factor_expr
  14             | arith_expr MINUS factor_expr
  15             | factor_expr

  16  factor_expr : factor_expr TIMES app_expr
  17              | factor_expr DIV app_expr
  18              | app_expr

  19  app_expr : app_expr atomic_expr
  20           | atomic_expr

  21  atomic_expr : INT
  22              | BOOL
  23              | ID
  24              | LPAR pair_expr RPAR

  25  var : ID

  26  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (26)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	toplevel  goto 10
	pair_expr  goto 11
	expr  goto 12
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (21)

	.  reduce 21


state 4
	atomic_expr : BOOL .  (22)

	.  reduce 22


state 5
	atomic_expr : ID .  (23)

	.  reduce 23


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	toplevel : LET . REC var var EQ expr SEMISEMI  (3)
	expr : LET . var EQ expr IN expr  (6)
	expr : LET . REC var var EQ expr IN expr  (7)

	ID  shift 17
	REC  shift 18
	.  error

	var  goto 19


state 7
	expr : IF . expr THEN expr ELSE expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 21
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 8
	atomic_expr : LPAR . pair_expr RPAR  (24)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	pair_expr  goto 22
	expr  goto 12
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 9
	expr : FUN . var ARROW expr  (9)

	ID  shift 17
	.  error

	var  goto 23


state 10
	%entry% : '\001' toplevel .  (26)

	.  reduce 26


state 11
	toplevel : pair_expr . SEMISEMI  (1)

	SEMISEMI  shift 24
	.  error


state 12
	pair_expr : expr . KANMA pair_expr  (4)
	pair_expr : expr .  (5)

	KANMA  shift 25
	RPAR  reduce 5
	SEMISEMI  reduce 5


state 13
	expr : arith_expr . EQ arith_expr  (10)
	expr : arith_expr . LT arith_expr  (11)
	expr : arith_expr .  (12)
	arith_expr : arith_expr . PLUS factor_expr  (13)
	arith_expr : arith_expr . MINUS factor_expr  (14)

	PLUS  shift 26
	MINUS  shift 27
	EQ  shift 28
	LT  shift 29
	IN  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	KANMA  reduce 12
	SEMISEMI  reduce 12


state 14
	arith_expr : factor_expr .  (15)
	factor_expr : factor_expr . TIMES app_expr  (16)
	factor_expr : factor_expr . DIV app_expr  (17)

	TIMES  shift 30
	DIV  shift 31
	IN  reduce 15
	PLUS  reduce 15
	MINUS  reduce 15
	EQ  reduce 15
	LT  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	KANMA  reduce 15
	SEMISEMI  reduce 15


state 15
	factor_expr : app_expr .  (18)
	app_expr : app_expr . atomic_expr  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 18
	PLUS  reduce 18
	TIMES  reduce 18
	MINUS  reduce 18
	DIV  reduce 18
	EQ  reduce 18
	LT  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	RPAR  reduce 18
	KANMA  reduce 18
	SEMISEMI  reduce 18

	atomic_expr  goto 32


state 16
	app_expr : atomic_expr .  (20)

	.  reduce 20


state 17
	var : ID .  (25)

	.  reduce 25


state 18
	toplevel : LET REC . var var EQ expr SEMISEMI  (3)
	expr : LET REC . var var EQ expr IN expr  (7)

	ID  shift 17
	.  error

	var  goto 33


state 19
	toplevel : LET var . EQ expr SEMISEMI  (2)
	expr : LET var . EQ expr IN expr  (6)

	EQ  shift 34
	.  error


state 20
	expr : LET . var EQ expr IN expr  (6)
	expr : LET . REC var var EQ expr IN expr  (7)

	ID  shift 17
	REC  shift 35
	.  error

	var  goto 36


state 21
	expr : IF expr . THEN expr ELSE expr  (8)

	THEN  shift 37
	.  error


state 22
	atomic_expr : LPAR pair_expr . RPAR  (24)

	RPAR  shift 38
	.  error


state 23
	expr : FUN var . ARROW expr  (9)

	ARROW  shift 39
	.  error


state 24
	toplevel : pair_expr SEMISEMI .  (1)

	.  reduce 1


state 25
	pair_expr : expr KANMA . pair_expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	pair_expr  goto 40
	expr  goto 12
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 26
	arith_expr : arith_expr PLUS . factor_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 41
	app_expr  goto 15
	atomic_expr  goto 16


state 27
	arith_expr : arith_expr MINUS . factor_expr  (14)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 42
	app_expr  goto 15
	atomic_expr  goto 16


state 28
	expr : arith_expr EQ . arith_expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 43
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 29
	expr : arith_expr LT . arith_expr  (11)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 44
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 30
	factor_expr : factor_expr TIMES . app_expr  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 45
	atomic_expr  goto 16


state 31
	factor_expr : factor_expr DIV . app_expr  (17)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 46
	atomic_expr  goto 16


state 32
	app_expr : app_expr atomic_expr .  (19)

	.  reduce 19


state 33
	toplevel : LET REC var . var EQ expr SEMISEMI  (3)
	expr : LET REC var . var EQ expr IN expr  (7)

	ID  shift 17
	.  error

	var  goto 47


state 34
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 48
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 35
	expr : LET REC . var var EQ expr IN expr  (7)

	ID  shift 17
	.  error

	var  goto 49


state 36
	expr : LET var . EQ expr IN expr  (6)

	EQ  shift 50
	.  error


state 37
	expr : IF expr THEN . expr ELSE expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 51
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 38
	atomic_expr : LPAR pair_expr RPAR .  (24)

	.  reduce 24


state 39
	expr : FUN var ARROW . expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 52
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 40
	pair_expr : expr KANMA pair_expr .  (4)

	.  reduce 4


state 41
	arith_expr : arith_expr PLUS factor_expr .  (13)
	factor_expr : factor_expr . TIMES app_expr  (16)
	factor_expr : factor_expr . DIV app_expr  (17)

	TIMES  shift 30
	DIV  shift 31
	IN  reduce 13
	PLUS  reduce 13
	MINUS  reduce 13
	EQ  reduce 13
	LT  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	KANMA  reduce 13
	SEMISEMI  reduce 13


state 42
	arith_expr : arith_expr MINUS factor_expr .  (14)
	factor_expr : factor_expr . TIMES app_expr  (16)
	factor_expr : factor_expr . DIV app_expr  (17)

	TIMES  shift 30
	DIV  shift 31
	IN  reduce 14
	PLUS  reduce 14
	MINUS  reduce 14
	EQ  reduce 14
	LT  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	KANMA  reduce 14
	SEMISEMI  reduce 14


state 43
	expr : arith_expr EQ arith_expr .  (10)
	arith_expr : arith_expr . PLUS factor_expr  (13)
	arith_expr : arith_expr . MINUS factor_expr  (14)

	PLUS  shift 26
	MINUS  shift 27
	IN  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	KANMA  reduce 10
	SEMISEMI  reduce 10


state 44
	expr : arith_expr LT arith_expr .  (11)
	arith_expr : arith_expr . PLUS factor_expr  (13)
	arith_expr : arith_expr . MINUS factor_expr  (14)

	PLUS  shift 26
	MINUS  shift 27
	IN  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	KANMA  reduce 11
	SEMISEMI  reduce 11


state 45
	factor_expr : factor_expr TIMES app_expr .  (16)
	app_expr : app_expr . atomic_expr  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 16
	PLUS  reduce 16
	TIMES  reduce 16
	MINUS  reduce 16
	DIV  reduce 16
	EQ  reduce 16
	LT  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	KANMA  reduce 16
	SEMISEMI  reduce 16

	atomic_expr  goto 32


state 46
	factor_expr : factor_expr DIV app_expr .  (17)
	app_expr : app_expr . atomic_expr  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 17
	PLUS  reduce 17
	TIMES  reduce 17
	MINUS  reduce 17
	DIV  reduce 17
	EQ  reduce 17
	LT  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	KANMA  reduce 17
	SEMISEMI  reduce 17

	atomic_expr  goto 32


state 47
	toplevel : LET REC var var . EQ expr SEMISEMI  (3)
	expr : LET REC var var . EQ expr IN expr  (7)

	EQ  shift 53
	.  error


state 48
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (6)

	IN  shift 54
	SEMISEMI  shift 55
	.  error


state 49
	expr : LET REC var . var EQ expr IN expr  (7)

	ID  shift 17
	.  error

	var  goto 56


state 50
	expr : LET var EQ . expr IN expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 57
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 51
	expr : IF expr THEN expr . ELSE expr  (8)

	ELSE  shift 58
	.  error


state 52
	expr : FUN var ARROW expr .  (9)

	.  reduce 9


state 53
	toplevel : LET REC var var EQ . expr SEMISEMI  (3)
	expr : LET REC var var EQ . expr IN expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 59
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 54
	expr : LET var EQ expr IN . expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 60
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 55
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 56
	expr : LET REC var var . EQ expr IN expr  (7)

	EQ  shift 61
	.  error


state 57
	expr : LET var EQ expr . IN expr  (6)

	IN  shift 54
	.  error


state 58
	expr : IF expr THEN expr ELSE . expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 62
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 59
	toplevel : LET REC var var EQ expr . SEMISEMI  (3)
	expr : LET REC var var EQ expr . IN expr  (7)

	IN  shift 63
	SEMISEMI  shift 64
	.  error


state 60
	expr : LET var EQ expr IN expr .  (6)

	.  reduce 6


state 61
	expr : LET REC var var EQ . expr IN expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 65
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 62
	expr : IF expr THEN expr ELSE expr .  (8)

	.  reduce 8


state 63
	expr : LET REC var var EQ expr IN . expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 66
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 64
	toplevel : LET REC var var EQ expr SEMISEMI .  (3)

	.  reduce 3


state 65
	expr : LET REC var var EQ expr . IN expr  (7)

	IN  shift 63
	.  error


state 66
	expr : LET REC var var EQ expr IN expr .  (7)

	.  reduce 7


24 terminals, 10 nonterminals
27 grammar rules, 67 states
